[package]
name = "tf2-price"
description = "Utilities for Team Fortress 2 item pricing."
version = "0.12.0"
edition = "2021"
authors = ["Julia"]
homepage = "https://github.com/juliarose/tf2-price"
repository = "https://github.com/juliarose/tf2-price"
license = "MIT"
keywords = ["tf2", "steam"]
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
impl_ops = "^0.1"
thiserror = "1.0.38"

[dev-dependencies]
serde_json = "^1.0"
assert-json-diff = "^2.0.1"
criterion = "0.3"

[features]
b32 = []

[[bench]]
name = "string_conversions"
harness = false

[[bench]]
name = "saturating"
harness = false